--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
-    "meteor-node-stubs": "~0.2.4"
+    "bootstrap": "^4.0.0-alpha.5",
+    "meteor-node-stubs": "~0.2.4",
+    "tether": "^1.4.0"
   }
 }
