--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "simple-todos",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "test": "meteor test --driver-package=dispatch:mocha-browser"
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
     "bootstrap": "^4.0.0-alpha.5",
     "meteor-node-stubs": "~0.2.4",
+    "path": "^0.12.7",
     "tether": "^1.4.0"
+  },
+  "devDependencies": {
+    "faker": "^4.1.0"
   }
 }
