--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
     "bootstrap": "^4.0.0-alpha.5",
+    "denodeify": "^1.2.1",
     "meteor-node-stubs": "~0.2.4",
     "path": "^0.12.7",
     "tether": "^1.4.0"
