--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "test": "meteor test --driver-package=dispatch:mocha-browser"
+    "test": "meteor test --driver-package=dispatch:mocha-browser",
+    "test-app-watch": "meteor test --full-app --driver-package dispatch:mocha-browser",
+    "chimp-watch": "chimp --ddp=http://localhost:3000 --watch --mocha --path=tests",
+    "chimp-test": "chimp --mocha --path=tests"
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
